# This file is part of COMP_hack.
#
# Copyright (C) 2010-2016 COMP_hack Team <compomega@tutanota.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(comp_objgen)

MESSAGE("** Configuring ${PROJECT_NAME} **")

# This include is for Push/PopIgnore only.
INCLUDE_DIRECTORIES(${LIBOBJGEN_INCLUDES})
INCLUDE_DIRECTORIES(${TINYXML2_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CASSANDRA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(comp_objgen_SRCS
	src/main.cpp
)

SET(comp_objgen_HDRS
)

ADD_EXECUTABLE(${PROJECT_NAME} ${comp_objgen_SRCS} ${comp_objgen_HDRS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} objgen)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
